--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.exclude": {
         ".gitignore": true,
-        ".vscode": true
+        ".vscode": true,
+		"**/bin": true
     }
 }
