--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
     "files.exclude": {
         ".gitignore": true,
-        ".vscode": true,
-		"**/bin": true
+        ".vscode": true
     }
 }
